<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/ic_community"
        android:title="@string/group"
        app:cnb_iconColor="@color/main_color"
        app:cnb_textColor="@color/main_color" />

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/ic_plus"
        android:title="@string/add_post_nav"
        app:cnb_iconColor="@color/main_color"
        app:cnb_textColor="@color/main_color" />

    <item
        android:id="@+id/navigation_marketPosts"
        android:icon="@drawable/ic_buy"
        android:title="@string/market_bottom"
        app:cnb_iconColor="@color/main_color"
        app:cnb_textColor="@color/main_color" />


</menu>