<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:overScrollMode="never"
    tools:context=".screens.auth.sign_up.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:context=".screens.auth.sign_up.RegisterFragment">

        <TextView
            android:id="@+id/tale_welcome2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:fontFamily="@font/helvatice_thin"
            android:text="@string/sign_up_to_get_started"
            android:textColor="@color/gray_blue"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/emailRegInput"
            app:layout_constraintEnd_toEndOf="@+id/emailRegInput"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/emailRegInput" />

        <TextView
            android:id="@+id/welcome2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montera_regular"
            android:text="@string/create_account"
            android:textColor="@color/dark_blue"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@+id/tale_welcome2"
            app:layout_constraintStart_toStartOf="@+id/tale_welcome2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/helvatice_thin"
            android:text="@string/already_user"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/toLogin"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/toLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/helvatice_medium"
            android:text="@string/sign_in"
            android:textColor="@color/main_color"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textview2" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailRegInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="85dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/costum_input"
            android:fontFamily="@font/montera_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingTop="16dp"
            android:paddingEnd="36dp"
            android:paddingBottom="17dp"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/gray_blue"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/passRegInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passRegInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/costum_input"
            android:fontFamily="@font/montera_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingTop="16dp"
            android:paddingEnd="36dp"
            android:paddingBottom="17dp"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/gray_blue"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/passRegConfInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailRegInput" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_wtih_google"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:background="@drawable/custom_button_google"
            android:drawableStart="@drawable/ic_logo_google"
            android:fontFamily="@font/helvatice_medium"
            android:gravity="center"
            android:paddingStart="60dp"
            android:paddingTop="10dp"
            android:paddingEnd="80dp"
            android:paddingBottom="10dp"
            android:text="@string/connect_with_google"
            android:textAllCaps="false"
            android:textColor="#3B5997"
            app:layout_constraintBottom_toTopOf="@+id/textview2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registrationRegButton" />

        <Button
            android:id="@+id/registrationRegButton"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/helvatice_medium"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/register_wtih_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passRegConfInput" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passRegConfInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:background="@drawable/costum_input"
            android:fontFamily="@font/montera_regular"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingTop="16dp"
            android:paddingEnd="36dp"
            android:paddingBottom="17dp"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/gray_blue"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/registrationRegButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passRegInput" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>