<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:overScrollMode="never"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".screens.auth.sign_in.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:context=".screens.auth.sign_in.LoginFragment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/costum_input"
            android:fontFamily="@font/montera_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingTop="16dp"
            android:paddingEnd="36dp"
            android:paddingBottom="17dp"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/gray_blue"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/passInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:background="@drawable/costum_input"
            android:fontFamily="@font/montera_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingTop="16dp"
            android:paddingEnd="36dp"
            android:paddingBottom="17dp"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/gray_blue"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginInput" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="85dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/montera_regular"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/login_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passInput" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_google"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:background="@drawable/custom_button_google"
            android:drawableStart="@drawable/ic_logo_google"
            android:fontFamily="@font/montera_regular"
            android:gravity="center"
            android:paddingStart="60dp"
            android:paddingTop="10dp"
            android:paddingEnd="80dp"
            android:paddingBottom="10dp"
            android:text="@string/connect_with_google"
            android:textAllCaps="false"
            android:textColor="#3B5997"
            app:layout_constraintBottom_toTopOf="@+id/textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        <TextView
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="15sp"
            android:fontFamily="@font/proxima_semi_bold"
            android:text="@string/forgot_password"
            android:textColor="@color/dark_blue"
            app:layout_constraintEnd_toEndOf="@+id/passInput"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/passInput"
            app:layout_constraintTop_toBottomOf="@+id/passInput" />

        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/montera_regular"
            android:text="I'm a new user,"
            android:textColor="@color/dark_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/registerButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/proxima_semi_bold"
            android:text="@string/sign_up"
            android:textColor="@color/main_color"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textview" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="6dp"
            android:fontFamily="@font/montera_bold"
            android:text="@string/welcome"
            android:textColor="@color/dark_blue"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/tale_welcome"
            app:layout_constraintStart_toStartOf="@+id/tale_welcome"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tale_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:fontFamily="@font/montera_regular"
            android:text="@string/sign_in_to_continue"
            android:textColor="@color/gray_blue"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/loginInput"
            app:layout_constraintEnd_toEndOf="@+id/loginInput"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/loginInput" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>