<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:context=".screens.bottom_nav.community.singlepost.SingleCommunityPostFragment">


        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/singlePostRecyclerPhoto"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/singleTitle" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/authorIV"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="32dp"
            android:elevation="7dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/circleImageView" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/helvetica_heavy"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/authorIV"
            app:layout_constraintTop_toTopOf="@+id/authorIV"
            tools:text="giorgi odishvili" />

        <TextView
            android:id="@+id/addedPostText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:fontFamily="@font/helvatice_thin"
            android:text="-მა დაამატა პოსტი"
            android:textColor="@color/gray_blue"
            app:layout_constraintBottom_toBottomOf="@+id/name"
            app:layout_constraintStart_toEndOf="@+id/name"
            app:layout_constraintTop_toTopOf="@+id/name" />

        <TextView
            android:id="@+id/descriptionTB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/helvetica_medium"
            android:textColor="@color/dark_gray"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deletebutton"
            tools:text="giorgi odishvili" />

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"

            android:fontFamily="@font/helvetica_medium"
            android:textColor="#D61F1F"
            android:text="@string/phone_single_post"
            app:layout_constraintEnd_toStartOf="@+id/deletebutton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/singlePostRecyclerPhoto"
            tools:text="574 174 383" />


        <TextView
            android:id="@+id/singleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/helvatice_medium"
            android:text="title"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/authorIV"
            app:layout_constraintTop_toBottomOf="@+id/authorIV" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/helvetica_thin"

            android:textColor="@color/main_color"
            app:layout_constraintBottom_toBottomOf="@+id/authorIV"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/deletebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_garbage"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/singlePostRecyclerPhoto"
            app:layout_constraintTop_toBottomOf="@+id/singlePostRecyclerPhoto" />


        <TextView
            android:id="@+id/mainParametersTV"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/card_button_shape"
            android:padding="5dp"
            android:text="@string/parameters_single_post"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTB" />

        <TextView
            android:id="@+id/manufacturerTV"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/helvetica_thin"
            android:padding="5dp"
            tools:text="@string/manufacturer_single_post"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainParametersTV" />

        <TextView
            android:id="@+id/modelTV"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/helvetica_thin"
            android:padding="5dp"
            tools:text="@string/model_single_post"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/manufacturerTV" />

        <TextView
            android:id="@+id/yearTV"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/helvetica_thin"
            android:padding="5dp"
            tools:text="@string/year_single_post"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modelTV" />

        <TextView
            android:id="@+id/fuelTypeTV"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/helvetica_thin"
            android:padding="5dp"
            tools:text="@string/fuel_type_single_post"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yearTV" />

        <TextView
            android:id="@+id/mileageTV"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/helvetica_thin"
            android:padding="5dp"
            tools:text="@string/mileage_single_post"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fuelTypeTV" />

        <TextView
            android:id="@+id/vinTV"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/helvetica_thin"
            android:padding="5dp"
            tools:text="@string/vin_single_post"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mileageTV" />

        <TextView
            android:id="@+id/transmissionTypeTV"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/helvetica_thin"
            android:padding="5dp"
            tools:text="@string/transmission_type_single_post"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vinTV" />

        <TextView
            android:id="@+id/wheelSideTV"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/helvetica_thin"
            android:padding="5dp"
            tools:text="@string/wheel_side_single_post"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transmissionTypeTV" />

        <TextView
            android:id="@+id/cylindersTV"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/helvetica_thin"
            android:padding="5dp"
            tools:text="@string/cylinder_single_post"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wheelSideTV" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
